Moved the collected snippets from library to avoid syntax errors.